fix layout bugs

--- a/src/app/Components/actor-details/actor-details.component.css
+++ b/src/app/Components/actor-details/actor-details.component.css
@@ -37,6 +37,12 @@
 .text-box{
     text-align:center;
 }
+.pop-box{
+    width:30px;
+    margin:auto;
+    text-align:center;
+    background-color:#db4949;
+}
 @media screen and (max-width:768px){
    
 }
